# dompeg

./: Cargo.toml  README.md  build.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/services/video/: decoder.rs  mod.rs  service.rs
core/src/video/: decoder.rs  mod.rs  search.rs
data/: resources.gresource.xml
i18n/en/: dompeg.ftl
i18n/es/: dompeg.ftl
i18n/pt/: dompeg.ftl
src/: app.rs  main.rs
src/app/: mod.rs
src/app/components/: about_dialog.rs  content.rs  convert_dialog.rs  extract_dialog.rs  image_list.rs  mod.rs  preferences.rs  search_bar.rs  searchbar.rs  tool_bar.rs  toolbar.rs  video_list.rs
src/app/config/: actions.rs  info.rs  localization.rs  resources.rs  settings.rs  setup.rs
src/app/factories/: image.rs  layout.rs  video.rs
src/app/models/: mod.rs  video.rs
src/core/: decoder.rs  mod.rs  search.rs  service.rs
